# WebSite

./: .gitignore
Communication/: Dockerfile  mbt-server.cabal  my-httpd.conf
Communication/TestParts/: VideoTest.html  hide.html
Communication/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Communication/html/: index.html  index0.html  index1.html  index10.html  index11.html  index12.html  index13.html  index14.html  index2.html  index3.html  index4.html  testScript.html
Communication/src/: ApplyAll.hs  Calculate.hs  ExpRules.hs  ExpStrat.hs  FSM.hs  FeedBack0.hs  FeedBack1.hs  FeedBack10.hs  FeedBack11.hs  FeedBack12.hs  FeedBack13.hs  FeedBack14.hs  FeedBack2.hs  FeedBack3.hs  FeedBack4.hs  FeedBackI.hs  ImportStrat.hs  InterRules.hs  InterStrat.hs  Main.hs  Parameter.hs  Refinement.hs  Rules.hs  Search.hs  State.hs  StrategyBas.hs  TracerN.hs  Trails.hs  Utils.hs  WorkOut.hs  buggys  par0  par12  par3  rules
Communication/src/buggyRules/: buggys  buggysE
Communication/src/parameters/: par0  par10  par112  par12  par13  par3
