cabal-version:      2.4
name:               mbt-server
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable mbt-server
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, cgi, QuickCheck, parsec, wl-pprint, mtl, containers, random, transformers, time
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:    Ideas.Text.JSON
                      Ideas.Text.JSON.Builder
                      Ideas.Text.JSON.Class
                      Ideas.Text.JSON.Data
                      Ideas.Text.JSON.Decoder
                      Ideas.Text.JSON.RPC
                      Ideas.Text.UTF8
                      Ideas.Utils.Decoding
                      Ideas.Utils.Parsing
                      Calculate
                      FeedBackI
                      Utils
                      Parameter
                      Rules
                      Trails 
                      StrategyBas
                      Refinement
                      InterRules
                      InterStrat
                      TracerN 
                      FSM 
                      State
                      ImportStrat
                      WorkOut



